debuglog.txt
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:112:18: error: 'A8' was not declared in this scope
   {"shrebutton", A8}
                  ^~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:112:18: note: suggested alternative: 'A7'
   {"shrebutton", A8}
                  ^~
                  A7
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:113:1: error: could not convert '{{"accx1", A5}, {"accy1", A4}, {"accx2", A1}, {"accy2", A0}, {"c_button1", A6}, {"z_button1", A7}, {"c_button2", A2}, {"z_button2", A3}, {"shrebutton", <expression error>}}' from '<brace-enclosed initializer list>' to 'std::map<std::basic_string<char>, unsigned char>'
 };
 ^
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino: In member function 'void Nunchuckcontr::init()':
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:536:7: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
       nunchuckFunctions::Wire.setClock(10000) ;
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:539:7: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
       nunchuckFunctions::selectNunchuckChannel(0);
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:540:7: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
       nunchuckFunctions::nunchuck_init();  // send the initilization handshake
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:541:7: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
       nunchuckFunctions::selectNunchuckChannel(1);
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:542:7: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
       nunchuckFunctions::nunchuck_init();  // send the initilization handshake
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino: In member function 'void Nunchuckcontr::readInput()':
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:558:9: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
         nunchuckFunctions::selectNunchuckChannel(n);
         ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:560:13: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
         if (nunchuckFunctions::nunchuck_get_data()) {
             ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:561:26: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
           accx[n] = (int)nunchuckFunctions::nunchuck_joyx() - NUNCHUCK_X_OFFSET;
                          ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:562:26: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
           accy[n] = (int)nunchuckFunctions::nunchuck_joyy() - NUNCHUCK_Y_OFFSET;
                          ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:563:30: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
           c_button[n] = (int)nunchuckFunctions::nunchuck_cbutton();
                              ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:564:30: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
           z_button[n] = (int)nunchuckFunctions::nunchuck_zbutton();
                              ^~~~~~~~~~~~~~~~~

Error during build: exit status 1
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:112:18: error: 'A8' was not declared in this scope
   {"shrebutton", A8}
                  ^~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:112:18: note: suggested alternative: 'A7'
   {"shrebutton", A8}
                  ^~
                  A7
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:113:1: error: could not convert '{{"accx1", A5}, {"accy1", A4}, {"accx2", A1}, {"accy2", A0}, {"c_button1", A6}, {"z_button1", A7}, {"c_button2", A2}, {"z_button2", A3}, {"shrebutton", <expression error>}}' from '<brace-enclosed initializer list>' to 'std::map<std::basic_string<char>, unsigned char>'
 };
 ^
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino: In member function 'void Nunchuckcontr::init()':
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:536:7: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
       nunchuckFunctions::Wire.setClock(10000) ;
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:539:7: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
       nunchuckFunctions::selectNunchuckChannel(0);
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:540:7: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
       nunchuckFunctions::nunchuck_init();  // send the initilization handshake
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:541:7: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
       nunchuckFunctions::selectNunchuckChannel(1);
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:542:7: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
       nunchuckFunctions::nunchuck_init();  // send the initilization handshake
       ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino: In member function 'void Nunchuckcontr::readInput()':
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:558:9: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
         nunchuckFunctions::selectNunchuckChannel(n);
         ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:560:13: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
         if (nunchuckFunctions::nunchuck_get_data()) {
             ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:561:26: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
           accx[n] = (int)nunchuckFunctions::nunchuck_joyx() - NUNCHUCK_X_OFFSET;
                          ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:562:26: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
           accy[n] = (int)nunchuckFunctions::nunchuck_joyy() - NUNCHUCK_Y_OFFSET;
                          ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:563:30: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
           c_button[n] = (int)nunchuckFunctions::nunchuck_cbutton();
                              ^~~~~~~~~~~~~~~~~
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:564:30: error: 'nunchuckFunctions' is not a class, namespace, or enumeration
           z_button[n] = (int)nunchuckFunctions::nunchuck_zbutton();
                              ^~~~~~~~~~~~~~~~~

Error during build: exit status 1
